synaptic (0.75.3) UNRELEASED; urgency=low

  * gtk/rgfetchprogress.cc:
    - fix potential crash due to division through zero
  * po/et.po:
    - updated, thanks to Guido Tabbernuk
  * debian/synaptic.postrm:
    - remove /etc/apt/apt.conf.d/99synaptic on purge (closes: #64550)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 01 Aug 2011 14:34:13 +0200

synaptic (0.75.2) unstable; urgency=low

  [ Michael Vogt ]
  * po/ru.po:
    - updated, thanks to Alexander Sashanov (closes: #614969)
  * po/pt_BR.po:
    - updated, thanks to Sérgio Cipolla (closes: #606447)
  * common/rpackage.{cc,h}:
    - add basic multiarch support, enabled by default, can
      be disabled at build time with 
      ./configure --without-apt-multiarch-support
    - no changes on non-multiarch enabled configurations
  * po/et.po:
    - updated, thanks to Mattias Põldaru 
  * po/de.po:
    - fix translation of breaks (closes: #622752)
  * po/pt_BR.po:
    - updaed, thanks to  Sergio Cipolla
  * updated translations from launchpad
  
  [ Robert Roth ]
  * Remove statusbar border and add padding (LP: #157574)
  * Moved command line argument parsing and displaying help before
    checking for administrative privileges (LP: #791135)

 -- Michael Vogt <mvo@debian.org>  Tue, 21 Jun 2011 15:10:59 +0200

synaptic (0.75.1) unstable; urgency=low

  * po/ru.po:
    - updated, thanks to Alexander Sashanov (closes: #614969)
  * gtk/rgrepositorywin.cc, gtk/gtkbuilder/window_repositories.ui:
    - fix repository editor (closes: #613436)
  * gtk/gtkbuilder/window_main.ui:
    - fixup glade->gtkbuild menu messup
  * gtk/rgmainwindow.cc:
    - hide "quick filter" if no apt-xapian-index is installed
      (closes: #613434)
  * po/pl.po:
    - fix newsgroup translation (thanks to Michal Szwaczko),
      closes: #613346
  * merged lp:~and471/synaptic/fix-resize-grip that adds a bit of
    extra spacing for the progressbar on the lower right

 -- Michael Vogt <mvo@debian.org>  Fri, 04 Mar 2011 11:55:24 +0100
