@@ -6,6 +6,9 @@ synaptic (0.75.3) UNRELEASED; urgency=low
     - updated, thanks to Guido Tabbernuk
   * debian/synaptic.postrm:
     - remove /etc/apt/apt.conf.d/99synaptic on purge (closes: #64550)
+  * gtk/rgmainwindow.cc, gtk/gsynaptic.cc:
+    - cleanup 
+  * fix build with apt in experimental
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 01 Aug 2011 14:34:13 +0200
 
